--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -2,9 +2,9 @@ node_modules
 dist
 .wrangler
 .dev.vars
-wrangler.toml
 .env
-
+wrangler.toml
+private
 # Change them to your taste:
 package-lock.json
 yarn.lock
